<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navFeed"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navActivities"
        android:icon="@drawable/ic_nav_activities"
        android:title="@string/title_activities" />

    <item
        android:id="@+id/navGroups"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/groups"/>

    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/title_profile" />

</menu>