<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <com.hms.socialsteps.utils.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/user_profile_image"
            android:src="@drawable/ic_baseline_directions_run_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPostUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#808080"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toTopOf="@id/ivProfile"
            tools:text="User Name">

        </TextView>

        <TextView
            android:id="@+id/tvPostDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postImage"
            tools:text="@string/i_did_a_running_activity" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivProfile"
            tools:text="12.22.2021" />

        <ImageView
            android:id="@+id/postImage"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/solid_circle"
            android:contentDescription="@string/post_image"
            android:src="@drawable/ic_baseline_directions_run_24_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProfile" />

        <ImageButton
            android:id="@+id/ibComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="18dp"
            android:background="@color/white"
            android:contentDescription="@string/comment_button"
            android:src="@drawable/ic_baseline_comment_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPostDetail" />

        <TextView
            android:id="@+id/tvCommentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ibComment"
            app:layout_constraintStart_toEndOf="@+id/ibComment"
            app:layout_constraintTop_toTopOf="@id/ibComment" />

        <ImageButton
            android:id="@+id/ibLike"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@color/white"
            android:contentDescription="@string/like_button"
            android:scaleType="center"
            android:src="@drawable/ic_outline_thumb_up_24"
            android:text="@string/like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ibLike"
            app:layout_constraintTop_toTopOf="@id/ibComment" />

        <ImageButton
            android:id="@+id/ibDislike"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@color/white"
            android:contentDescription="@string/like_button"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_thumb_up_green_24"
            android:text="@string/like"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ibLike"
            app:layout_constraintTop_toTopOf="@id/ibComment" />

        <TextView
            android:id="@+id/tvLikeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ibLike"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ibLike"
            app:layout_constraintTop_toTopOf="@id/ibLike"
            tools:text="146" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>