<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.statistics.friendstatistics.FriendStatisticsFragment">

   <TextView
       android:id="@+id/tvSortBy"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:text="@string/sort_by"
       android:layout_marginStart="20dp"
       android:layout_marginTop="10dp"
       android:textSize="15sp"
       android:textStyle="bold"
       android:textColor="@color/black"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tvSortBy"
        app:layout_constraintTop_toBottomOf="@id/tvSortBy"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="7dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:background="@drawable/step_selected"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/steps"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@drawable/step_unselected"
            android:text="@string/calories"
            android:textColor="@color/black"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvSortBy"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <com.sn.lib.NestedProgress
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:innerLoaderColor="@color/primary_green"
        app:outerLoaderColor="@color/primary_green_dark"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>